Added stats option to listener

--- a/templates/haproxy_listen_block.erb
+++ b/templates/haproxy_listen_block.erb
@@ -3,3 +3,4 @@ listen <%= @name %>
 <%= scope.function_template(['haproxy/fragments/_bind.erb']) -%>
 <%= scope.function_template(['haproxy/fragments/_mode.erb']) -%>
 <%= scope.function_template(['haproxy/fragments/_options.erb']) -%>
+<%= scope.function_template(['haproxy/fragments/_stats.erb']) -%>
